# rust_developer

./: .gitignore  README.md
hw01_hello_world/src/: main.rs
hw02_string_manip_cli/: Cargo.toml
hw02_string_manip_cli/src/: lib.rs  main.rs
hw03_string_manip_cli_revised/src/: main.rs
hw04_multithreaded_cli/src/: data4.csv  homework.md  lib.rs  main.rs
hw05_client_server_msger/: Cargo.toml  README.md  homework.md
hw05_client_server_msger/client/: Cargo.toml
hw05_client_server_msger/client/src/: lib.rs  main.rs
hw05_client_server_msger/common/src/: lib.rs
hw05_client_server_msger/server/src/: lib.rs  main.rs
hw05_client_server_msger/src/: lib.rs  main.rs
hw06_professionalize_client_server_app/: README.md
hw06_professionalize_client_server_app/client/: Cargo.toml
hw06_professionalize_client_server_app/client/src/: lib.rs  main.rs
hw06_professionalize_client_server_app/common/src/: lib.rs  main.rs
hw06_professionalize_client_server_app/server/: Cargo.toml
hw07_improve_error_handling/: Cargo.toml  README.md
hw07_improve_error_handling/client/: Cargo.toml
hw07_improve_error_handling/common/: Cargo.toml
hw07_improve_error_handling/server/: Cargo.toml
hw08_tokio_refactor/: README.md
hw08_tokio_rewrite/: Cargo.toml  README.md
hw08_tokio_rewrite/src/: lib.rs
hw09_test_and_doc/: Cargo.toml  README.md
hw09_test_and_doc/src/: lib.rs
hw11_adding_metrics/: Cargo.toml  README.md
kubernetes/deployments/: deploy-httpd-in-error-state.yaml  deploy-httpd-with-recreate.yaml
kubernetes/httpd/: deploy-httpd.yaml
(+26 files in other folders)
